--- a/veebipood/package.json
+++ b/veebipood/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "@gsap/react": "^2.1.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^10.11.1",
+    "gsap": "^3.12.5",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
