--- a/webshop/package.json
+++ b/webshop/package.json
@@ -6,9 +6,14 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.18",
+    "@reduxjs/toolkit": "^2.2.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.2",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "bootstrap": "^5.3.3",
     "firebase": "^10.12.1",
     "i18next": "^23.11.4",
@@ -16,8 +21,10 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "typescript": "^5.4.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
